ETH 2.0 fixed disconnect

--- a/client_sub.html
+++ b/client_sub.html
@@ -20,7 +20,7 @@
     var socket = new WebSocket("ws://localhost:5000/ws");
 
     socket.onopen = function (e) {
-        console.log('Соединение с сервером установлено');
+        console.log('Connected successfully');
     };
 
     socket.onmessage = function (event) {
